# depthfusion

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  BUILD_NOTES.md  CHANGELOG.md  INSTALL.html  INSTALL.md  INSTALLATION.md  LICENSE  README.md  ciqs-scorer.html  pyproject.toml  pytest_results.txt  requirements-freeze.txt  setup.sh  sync.sh  test-output.txt  test_results.txt
.agent-hub/: context.md  digittal-method-memory.md  pm-state.json
.agent-hub/outputs/: 2026-06-01-cloudflare-tunnel-coordination.md  2026-06-02-depthfusion-cf-tunnel-ready.md  2026-06-02-oq4-still-blocking.md  2026-06-03-status-and-heartbeat.md  2026-06-03-tunnel-live.md
.agent-hub/scripts/: heartbeat.sh
.claude/: v2-routing.yaml
.claude/workflows/: v2-consensus-ticket.js  v2-gate-review.js  v2-lane-batch.js  v2-leak-hunt.js  v2-merge-lane.js  v2-record-decision.js  v2-test-green-loop.js
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: benchmark.yml  ci.yml  installer-ci.yml  lint.yml  nightly.yml  pages.yml  publish.yml  release-desktop.yml  sbom.yml  security.yml  tauri-build.yml
app/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
app/docs/: updater-signing-key-setup.md
app/src/: App.tsx  DashboardPage.tsx  DocumentViewer.tsx  GraphPage.tsx  SearchPage.tsx  SettingsPage.tsx  SetupWizardPage.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: commands.rs  lib.rs  settings.rs  updater.rs
app/src-tauri/src/auth/: commands.rs  local.rs  logout.rs  mod.rs  oidc.rs  vault.rs
app/src-tauri/src/cache/: keywrap.rs  mod.rs  store.rs  tamper.rs
app/src-tauri/src/export/: commands.rs  mod.rs  policy.rs  stream.rs
config/: label_mapping.yml  model-pricing.json
docs/: 2026-05-05-to-depthfusion-confirm-e27-ready-for-consumption.md  MEMPALACE_DEPTHFUSION_ANALYSIS.md  README.md  add-dns-mcp-tonracein.html  add-stop-hook.md  bi-connectivity.md  capability-matrix.md  chatgpt-install.sh  chatgpt-mcp-setup.md  claude-design-handoff.html  cli.md  context.md  depthfusion-animated-demo.html  depthfusion-handoff-context.md  depthfusion-interactive.html  depthfusion-marketing.html  depthfusion-skillforge-divergence.md  depthfusion-v1-architecture.html  depthfusion-vs-alternatives-2026-03-28.md  e65-on-device-verification.md  honest-assessment-2026-03-28.md  mcp-http-server.md  mcp-local-setup.html  performance-measurement-prompt.md  power-user-research-2026-03-28.md  project-sync.md  release-process.md  ruflo-mod.md  show-hn-post.md  skillforge-integration-plan.md  sync-guide.md
docs/Account_synch/: AGENTS.md  CLAUDE.md  depthfusion-architecture.mermaid  depthfusion-build-plan.md  depthfusion-mega-prompt.md  depthfusion-retrieval-pipeline.mermaid  depthfusion-scaffold.sh  depthfusion-sprint-backlog.md  depthfusion-task-dependency.mermaid  master-continuity-document.md
docs/api/: metabase-dashboard.json  query-api.yaml
docs/benchmarks/: .gitignore  2026-05-02-local-run1-scoring.md  2026-05-02-local-run2-raw.jsonl  2026-05-02-local-run2-scoring.md  2026-05-02-local-run3-scoring.md  2026-05-02-vps-cpu-run1-raw.jsonl  2026-05-02-vps-cpu-run1-scoring.md  2026-05-02-vps-cpu-run2-scoring.md  2026-05-02-vps-cpu-run3-scoring.md  2026-05-02-vps-gpu-run1-scoring.md  2026-05-02-vps-gpu-run2-scoring.md  2026-05-02-vps-gpu-run3-raw.jsonl  2026-05-02-vps-gpu-run3-scoring.md  2026-05-15-post-dogfood.md  2026-05-16-local-run1-scored.jsonl  2026-05-16-local-run1-scoring.md  2026-05-16-local-run2-raw.jsonl  2026-05-16-local-run2-scored.jsonl  2026-05-16-local-run2-scoring.md  2026-05-16-local-run3-scored.jsonl  2026-05-16-local-run3-scoring.md  2026-05-17-ciqs-a-post-fix-scoring.md  2026-05-18-gates-comparison.md  2026-05-18-linear-blend-analysis.md  2026-05-18-local-run1-raw.jsonl  2026-05-18-local-run1-scoring.md  2026-05-18-local-run3-raw.jsonl  2026-05-19-ciqs-cat-d.json  2026-06-20-ciqs-cat-d.json  2026-07-11-research-goldset-v2.json  2026-07-11-standard-goldset-v2.json  2026-07-11-standard-vs-research-goldset-v2.md  README.md  acl-retrieval-20260611.md  v0.5.0-baseline.md
docs/coordination/: 2026-05-05-devex-review-of-handoff.md  2026-05-05-from-depthfusion-e27-ready-for-agent-ops.md  (+3 more)
docs/eval-sets/: README.md  (+4 more)
hooks/: depthfusion-stop.sh
scripts/: auto-compress.py  backfill_acl.py  bench_degradation.py  bench_fabric_seed.py  bench_provenance_queries.py  bench_publish_sse.py  bench_recall_latency.py  benchmark.py  check_benchmark_regression.py  ciqs-weekly.service  ciqs-weekly.timer  ciqs_compare.py  ciqs_harness.py  ciqs_summarise.py  ciqs_weekly.py  com.depthfusion.mlx-serve.plist  connect-vps.ps1  connect-vps.sh  decay-job.py  eval_decision.py  eval_dedup.py  eval_negative.py  generate_synthetic_corpus.py  install-git-hook.sh  install-mac-mlx.sh  install-mac-solo.sh  install-research-tools.sh  install-vps.sh  install-windows.ps1  install.ps1  install.sh  integration_smoke_test.sh  mac-parity.sh  mcp-health-check.sh  mcp-server.bat  mcp-server.sh  migration-rehearsal.sh  mine_session_prompts.py  mlx-serve-direct.py  mlx-serve.sh  (+11 more)
tests/: README.md  conftest.py  test_acl_frontmatter.py  test_acl_property.py  test_acl_retrieval.py  test_acl_verifier.py  test_acl_write_enforcement.py  test_admin_console_policy.py  test_admin_retention.py  test_aggregate_leak.py  test_analytics.py  test_atomic_replace.py  test_audit.py  test_budget.py  test_budget_e2e.py  test_cache.py  test_cache_activity_prefetch.py  test_capability_check.py  test_classification.py  test_cli_migrate.py  test_device_keychain.py  test_device_lease.py  test_device_login.py  test_device_registry.py  test_document_parser_base.py  test_document_parsers.py  test_dry_run_split.py  test_export_controls.py  test_expression_eval.py  test_fastapi_deps.py  test_generic_parser.py  test_identity_token_validator.py  test_ingest.py  test_legacy_shim.py  test_mcp_authz.py  test_migration_rehearsal.py  test_model_stats.py  test_ocr_parser.py  test_parse_budget.py  test_performance.py  (+14 more)
tools/: bench_cat_d.py
(+764 files in other folders)
