[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depthfusion"
version = "1.2.0"
description = "Depth-aware memory fusion for Claude Code — Cognitive Infrastructure Layer with event-sourced memory, typed memories, cognitive scoring, contradiction detection, and explainable retrieval"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
# ── v0.5 three-mode extras (S-42 AC-5) ───────────────────────────────
# `local` mode: BM25-only, no extra dependencies beyond the core.
local = []

# `vps-cpu` mode: Haiku reranker + ChromaDB. anthropic SDK is required
# for Haiku reranking; chromadb is used for optional Tier 2 vector search.
vps-cpu = [
    "anthropic>=0.40",
    "chromadb>=0.4",
    "fastapi>=0.100",
    "uvicorn>=0.23",
]

# `vps-gpu` mode: on-box Gemma (no Python dep — served via vLLM CLI)
# plus sentence-transformers for local embeddings. ChromaDB still
# included so the Tier 2 path stays available alongside the local
# vector backend. hnswlib powers the E-45 fused recall index.
vps-gpu = [
    "sentence-transformers>=2.2",
    "chromadb>=0.4",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "hnswlib>=0.7",
]

# `mac-mlx` mode: Apple Silicon GPU inference via mlx_lm.server.
# mlx-lm serves an OpenAI-compatible endpoint on port 8000; GemmaBackend
# connects to it identically to vLLM. sentence-transformers provides local
# embeddings (runs on CPU; MLX embedding support is opt-in via mlx-lm extras).
mac-mlx = [
    "mlx-lm>=0.18",
    "sentence-transformers>=2.2",
    "chromadb>=0.4",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "hnswlib>=0.7",
]

# E-45: standalone HNSW extra — install for the agent-ops bridge integration
# without pulling the rest of the vps-gpu/mac-mlx stack.
hnsw = [
    "sentence-transformers>=2.2",
    "hnswlib>=0.7",
]

rlm = ["rlms"]

dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.0",
    "ruff>=0.4",
    "types-PyYAML>=6.0.0",  # mypy stubs for yaml (S-59 T-181)
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".claude/worktrees",  # generated git worktrees — not production code
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]   # test assertions and names are often verbose
