[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depthfusion"
version = "1.2.2"
description = "Depth-aware memory fusion for Claude Code — Cognitive Infrastructure Layer with event-sourced memory, typed memories, cognitive scoring, contradiction detection, and explainable retrieval"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
# ── v0.5 three-mode extras (S-42 AC-5) ───────────────────────────────
# `local` mode: BM25-only, no extra dependencies beyond the core.
local = []

# `vps-cpu` mode: Haiku reranker + ChromaDB. anthropic SDK is required
# for Haiku reranking; chromadb is used for optional Tier 2 vector search.
vps-cpu = [
    "anthropic>=0.40",
    "chromadb>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    # security lower bounds — transitive via chromadb / fastapi
    "Mako>=1.3.12",
    "PyJWT>=2.12.0",
    "Pygments>=2.20.0",
    "Markdown>=3.8.1",
    "starlette>=1.0.1",   # CVE: missing Host header validation (Dependabot #35)
]

# `vps-gpu` mode: on-box Gemma (no Python dep — served via vLLM CLI)
# plus sentence-transformers for local embeddings. ChromaDB still
# included so the Tier 2 path stays available alongside the local
# vector backend. hnswlib powers the E-45 fused recall index.
vps-gpu = [
    "sentence-transformers>=2.2",
    "chromadb>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "hnswlib>=0.7",
    # security lower bounds — transitive via chromadb / fastapi
    "Mako>=1.3.12",
    "PyJWT>=2.12.0",
    "Pygments>=2.20.0",
    "Markdown>=3.8.1",
    "starlette>=1.0.1",   # CVE: missing Host header validation (Dependabot #35)
]

# `mac-mlx` mode: Apple Silicon GPU inference via mlx_lm.server.
# mlx-lm serves an OpenAI-compatible endpoint on port 8000; GemmaBackend
# connects to it identically to vLLM. sentence-transformers provides local
# embeddings (runs on CPU; MLX embedding support is opt-in via mlx-lm extras).
mac-mlx = [
    "mlx-lm>=0.18",
    "sentence-transformers>=2.2",
    "chromadb>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "hnswlib>=0.7",
    # security lower bounds — transitive via chromadb / fastapi
    "Mako>=1.3.12",
    "PyJWT>=2.12.0",
    "Pygments>=2.20.0",
    "Markdown>=3.8.1",
    "starlette>=1.0.1",   # CVE: missing Host header validation (Dependabot #35)
]

# E-45: standalone HNSW extra — install for the agent-ops bridge integration
# without pulling the rest of the vps-gpu/mac-mlx stack.
hnsw = [
    "sentence-transformers>=2.2",
    "hnswlib>=0.7",
]

rlm = ["rlms"]

# E-46: Event Graph Fabric streaming transport (S-142 AC-7).
# Install with: pip install depthfusion[fabric]
# Enables RedisStreamBackend for multi-agent memory fan-out.
# Redis stays loopback-only; never exposed on external interfaces.
fabric = [
    "redis>=5.0",
]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",  # async test support for EventStore tests (E-46)
    "pytest-cov>=5.0",
    "mypy>=1.0",
    "ruff>=0.4",
    "types-PyYAML>=6.0.0",  # mypy stubs for yaml (S-59 T-181)
    "anthropic>=0.40",       # HaikuBackend tests require the SDK
    "fastapi>=0.100",        # sidecar / UI server tests
    "httpx>=0.27",           # FastAPI TestClient transport
    "starlette>=1.0.1",      # CVE: missing Host header validation (Dependabot #35)
    "chromadb>=1.0,<2.0",   # graph/vector store tests (T-534 CI 80% floor)
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".claude/worktrees",  # generated git worktrees — not production code
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]   # test assertions and names are often verbose

[tool.uv]
# Security floor pins — transitive deps with known CVEs; patched versions already
# in uv.lock but these constraints prevent regression on future uv sync.
# chromadb critical (no upstream patch yet) tracked separately.
constraint-dependencies = [
    "mako>=1.3.12",       # CVE: path traversal (backslash + double-slash URI)
    "pyjwt>=2.12.0",      # CVE: accepts unknown crit header extensions
    "markdown>=3.8.1",    # CVE: uncaught exception
    "pygments>=2.20.0",   # CVE: ReDoS on GUID matching
]
