[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depthfusion"
version = "2.0.0"
description = "Depth-aware memory fusion for Claude Code — Cognitive Infrastructure Layer with event-sourced memory, typed memories, cognitive scoring, contradiction detection, and explainable retrieval"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "numpy>=1.24",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
    "pyyaml>=6.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
# ── v0.5 three-mode extras (S-42 AC-5) ───────────────────────────────
# `local` mode: BM25-only, no extra dependencies beyond the core.
local = []

# `vps-cpu` mode: Haiku reranker + ChromaDB. anthropic SDK is required
# for Haiku reranking; chromadb is used for optional Tier 2 vector search.
vps-cpu = [
    "anthropic>=0.40",
    "chromadb>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    # security lower bounds — transitive via chromadb / fastapi
    "Mako>=1.3.12",
    "PyJWT>=2.13.0",
    "Pygments>=2.20.0",
    "Markdown>=3.8.1",
    "starlette>=1.3.1",   # CVE-2026-54282/54283: Host header + form DoS (Dependabot #35)
]

# `vps-gpu` mode: on-box Gemma (no Python dep — served via vLLM CLI)
# plus sentence-transformers for local embeddings. ChromaDB still
# included so the Tier 2 path stays available alongside the local
# vector backend. hnswlib powers the E-45 fused recall index.
vps-gpu = [
    "sentence-transformers>=2.2",
    "chromadb>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "hnswlib>=0.7",
    # security lower bounds — transitive via chromadb / fastapi
    "Mako>=1.3.12",
    "PyJWT>=2.13.0",
    "Pygments>=2.20.0",
    "Markdown>=3.8.1",
    "starlette>=1.3.1",   # CVE-2026-54282/54283: Host header + form DoS (Dependabot #35)
]

# `mac-mlx` mode: Apple Silicon GPU inference via mlx_lm.server.
# mlx-lm serves an OpenAI-compatible endpoint on port 8000; GemmaBackend
# connects to it identically to vLLM. sentence-transformers provides local
# embeddings (runs on CPU; MLX embedding support is opt-in via mlx-lm extras).
mac-mlx = [
    "mlx-lm>=0.18",
    "sentence-transformers>=2.2",
    "chromadb>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "hnswlib>=0.7",
    # security lower bounds — transitive via chromadb / fastapi
    "Mako>=1.3.12",
    "PyJWT>=2.13.0",
    "Pygments>=2.20.0",
    "Markdown>=3.8.1",
    "starlette>=1.3.1",   # CVE-2026-54282/54283: Host header + form DoS (Dependabot #35)
]

# E-45: standalone HNSW extra — install for the agent-ops bridge integration
# without pulling the rest of the vps-gpu/mac-mlx stack.
hnsw = [
    "sentence-transformers>=2.2",
    "hnswlib>=0.7",
]

rlm = ["rlms"]

# T-598: OCR support for raster image ingestion.
# Install with: pip install depthfusion[ocr]
# Requires system tesseract binary for pytesseract.
# Activate at runtime with: DEPTHFUSION_OCR_ENABLED=1
ocr = [
    "pytesseract>=0.3",
    "Pillow>=10.0",
    "rapidocr_onnxruntime>=1.3; python_version>='3.8'",
]

# E-46: Event Graph Fabric streaming transport (S-142 AC-7).
# Install with: pip install depthfusion[fabric]
# Enables RedisStreamBackend for multi-agent memory fan-out.
# Redis stays loopback-only; never exposed on external interfaces.
fabric = [
    "redis>=5.0",
]

dev = [
    "openpyxl>=3.1",
    "python-pptx>=0.6",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",  # async test support for EventStore tests (E-46)
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",   # --timeout flag used in nightly.yml and addopts
    "mypy>=1.0",
    "ruff>=0.4",
    "types-PyYAML>=6.0.0",  # mypy stubs for yaml (S-59 T-181)
    "anthropic>=0.40",       # HaikuBackend tests require the SDK
    "fastapi>=0.100",        # sidecar / UI server tests
    "httpx>=0.27",           # FastAPI TestClient transport
    "starlette>=1.3.1",      # CVE-2026-54282/54283: Host header + form DoS (Dependabot #35)
    "chromadb>=1.0,<2.0",   # graph/vector store tests (T-534 CI 80% floor)
    "hnswlib>=0.7",          # HNSW index tests (T-534 CI 80% floor)
    "pypdf>=3.0",            # optional PDF parser — imported by test_ingest_throughput.py
    "pdfplumber>=0.11",      # PdfParser primary backend — required by test_document_parsers.py
    "pdfminer.six>=20221105",  # PdfParser fallback backend — pdfplumber transitive dep but pinned for CI
    "cryptography>=48.0.1",  # token_validator.py direct import; not installed transitively by pip
    "python-docx>=0.8",     # ingest/parser.py + test_ingest.py direct import; not installed transitively by pip
    "msal>=1.0",            # sharepoint.py lazy import; test_sharepoint.py expects ConfigurationError not ImportError
]

[project.scripts]
depthfusion-migrate = "depthfusion.cli.migrate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --timeout=30 -k 'not (collector_reliability or integration)'"
pythonpath = ["src"]
# tests/integration/ and tests/test_integration/ are excluded from the default CI
# collection — run manually with explicit path (require live external credentials).
# test_bench*/test_benchmarks are perf tests excluded from Gate 3/5 regression checks.
# tests/test_http_mcp/ and tests/test_mcp/ require a live HTTP server (network bind)
# and cannot run inside the Codex sandbox (network:restricted). Run manually:
#   python -m pytest tests/test_http_mcp/ tests/test_mcp/ -v
norecursedirs = ["tests/integration", "tests/test_integration", "tests/test_bench", "tests/test_benchmark", "tests/test_benchmarks", "tests/test_http_mcp", "tests/test_mcp"]
markers = [
    "integration: marks tests that require live Azure/OIDC credentials (deselect with '-m not integration')",
]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".claude/worktrees",  # generated git worktrees — not production code
    ".claire/worktrees",  # generated git worktrees — not production code
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]                 # test assertions and names are often verbose
"tests/test_acl_*.py" = ["E402"]      # conditional ACL imports must follow role-setup code
"tests/test_role_admin.py" = ["E741"] # single-letter loop vars acceptable in test helpers
"scripts/mlx-serve-direct.py" = ["E402"]        # socket import follows lazy-import guard
"scripts/retrieval_benchmark.py" = ["E501"]     # benchmark markdown table rows are intentionally wide
"src/depthfusion/analytics/model_stats.py" = ["E501"]   # _PRIOR_ROWS data table rows
"src/depthfusion/mcp/tools/_registry.py" = ["E501"]     # JSON schema strings in registry

[tool.uv]
# Security floor pins — transitive deps with known CVEs; patched versions already
# in uv.lock but these constraints prevent regression on future uv sync.
# chromadb critical (no upstream patch yet) tracked separately.
constraint-dependencies = [
    "mako>=1.3.12",       # CVE: path traversal (backslash + double-slash URI)
    "pyjwt>=2.13.0",      # CVE: accepts unknown crit header extensions
    "cryptography>=48.0.1",  # CVE: vulnerable OpenSSL in wheels (transitive via chromadb)
    "starlette>=1.3.1",   # CVE-2026-54282/54283: Host header + form DoS
    "markdown>=3.8.1",    # CVE: uncaught exception
    "pygments>=2.20.0",   # CVE: ReDoS on GUID matching
]
