[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2" }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
url = "2"
tokio = { version = "1", features = ["sync"] }
once_cell = "1"
reqwest = { version = "0.12", features = ["json"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tauri-plugin-updater = "2"
tauri-plugin-store = "2"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
hmac = "0.12"
zeroize = "1"

[dev-dependencies]
# HTTP mocking for the OIDC token-endpoint tests (oidc.rs exchange_code).
mockito = "1"
# Test-only async runtime features so #[tokio::test] can drive the async oidc
# tests. The main [dependencies] tokio intentionally enables only "sync" to keep
# the production binary's feature set/size unchanged; the rt/macros/multi-thread
# features are needed solely for the test target.
tokio = { version = "1", features = ["sync", "rt", "macros", "rt-multi-thread"] }
